--- a/src/main/resources/layout.fxml
+++ b/src/main/resources/layout.fxml
@@ -19,8 +19,7 @@
 <GridPane gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="727.0" prefWidth="1134.0" stylesheets="stylesheet.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.pw.mini.symulacje.Controller">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="120.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -120,60 +119,71 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </GridPane>
-      <GridPane GridPane.columnIndex="1">
+      <GridPane gridLinesVisible="true" GridPane.columnIndex="1">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" percentHeight="67.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Pane fx:id="visualisationPane" prefHeight="200.0" prefWidth="200.0" />
-            <LineChart fx:id="kinematicsChart" animated="false" createSymbols="false" prefHeight="57.0" prefWidth="195.0" title="Position, velocity and acceleration" GridPane.rowIndex="1">
-              <xAxis>
-                <NumberAxis forceZeroInRange="false" side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis side="LEFT" />
-              </yAxis>
-              <cursor>
-                <Cursor fx:constant="CROSSHAIR" />
-              </cursor>
-            </LineChart>
-         </children>
-      </GridPane>
-      <GridPane GridPane.columnIndex="2">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" percentHeight="33.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <LineChart fx:id="forcesChart" animated="false" createSymbols="false" title="Forces">
-              <xAxis>
-                <NumberAxis forceZeroInRange="false" side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis side="LEFT" />
-              </yAxis>
-              <cursor>
-                <Cursor fx:constant="CROSSHAIR" />
-              </cursor>
-            </LineChart>
-            <ScatterChart fx:id="trajectoryChart" animated="false" legendVisible="false" title="Trajectory" GridPane.rowIndex="1">
-              <xAxis>
-                <NumberAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis side="LEFT" />
-              </yAxis>
-               <cursor>
-                  <Cursor fx:constant="CROSSHAIR" />
-               </cursor>
-            </ScatterChart>
+            <GridPane gridLinesVisible="true">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" percentHeight="66.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" percentHeight="34.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Pane fx:id="visualisationPane" prefHeight="200.0" prefWidth="200.0" />
+                  <LineChart fx:id="kinematicsChart" animated="false" createSymbols="false" prefHeight="57.0" prefWidth="195.0" title="Position, velocity and acceleration" GridPane.rowIndex="1">
+                    <xAxis>
+                      <NumberAxis autoRanging="false" forceZeroInRange="false" side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis autoRanging="false" forceZeroInRange="false" side="LEFT" />
+                    </yAxis>
+                    <cursor>
+                      <Cursor fx:constant="CROSSHAIR" />
+                    </cursor>
+                  </LineChart>
+               </children>
+            </GridPane>
+            <GridPane gridLinesVisible="true" GridPane.columnIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" percentHeight="34.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" percentHeight="66.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <LineChart fx:id="forcesChart" animated="false" createSymbols="false" title="Forces">
+                    <xAxis>
+                      <NumberAxis autoRanging="false" forceZeroInRange="false" side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis autoRanging="false" forceZeroInRange="false" side="LEFT" />
+                    </yAxis>
+                    <cursor>
+                      <Cursor fx:constant="CROSSHAIR" />
+                    </cursor>
+                  </LineChart>
+                  <ScatterChart fx:id="trajectoryChart" animated="false" legendVisible="false" title="Trajectory" GridPane.rowIndex="1">
+                    <xAxis>
+                      <NumberAxis autoRanging="false" forceZeroInRange="false" side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis autoRanging="false" forceZeroInRange="false" side="LEFT" />
+                    </yAxis>
+                     <cursor>
+                        <Cursor fx:constant="CROSSHAIR" />
+                     </cursor>
+                  </ScatterChart>
+               </children>
+            </GridPane>
          </children>
       </GridPane>
    </children>
