--- a/src/main/resources/layout.fxml
+++ b/src/main/resources/layout.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.chart.ScatterChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -35,18 +34,9 @@
             <RowConstraints vgrow="NEVER" />
             <RowConstraints vgrow="NEVER" />
             <RowConstraints vgrow="NEVER" />
-            <RowConstraints vgrow="NEVER" />
-            <RowConstraints vgrow="NEVER" />
-            <RowConstraints vgrow="NEVER" />
-            <RowConstraints vgrow="NEVER" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints vgrow="NEVER" />
-            <RowConstraints vgrow="NEVER" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints vgrow="SOMETIMES" />
             <RowConstraints vgrow="SOMETIMES" />
             <RowConstraints vgrow="SOMETIMES" />
             <RowConstraints vgrow="SOMETIMES" />
@@ -68,52 +58,31 @@
         <Label GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="xValue" />
         <Label GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="xtValue" />
         <Label GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="xttValue" />
-        <Label text="Dynamics" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+        <Label text="Other" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label text="f" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
-        <Label text="g" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
-        <Label text="h" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
-        <Label text="Other" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER">
+        <Label text="t" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
+        <Label fx:id="tValue" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+        <Label text="Properties" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label text="w" GridPane.halignment="RIGHT" GridPane.rowIndex="9" />
-        <Label text="t" GridPane.halignment="RIGHT" GridPane.rowIndex="10" />
-        <Label fx:id="fValue" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-        <Label fx:id="gValue" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-        <Label fx:id="hValue" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-        <Label fx:id="wValue" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-        <Label fx:id="tValue" GridPane.columnIndex="1" GridPane.rowIndex="10" />
-        <Label text="Properties" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="11" GridPane.valignment="CENTER">
-            <font>
-                <Font size="16.0" />
-            </font>
-        </Label>
-        <Label text="x0" GridPane.halignment="RIGHT" GridPane.rowIndex="12" />
-        <Label text="v0" GridPane.halignment="RIGHT" GridPane.rowIndex="13" />
-        <Label text="dt" GridPane.halignment="RIGHT" GridPane.rowIndex="14" />
-        <Label text="m" GridPane.halignment="RIGHT" GridPane.rowIndex="15" />
-        <Label text="k" GridPane.halignment="RIGHT" GridPane.rowIndex="16" />
-        <Label text="c" GridPane.halignment="RIGHT" GridPane.rowIndex="17" />
-        <Label text="h(t)" GridPane.halignment="RIGHT" GridPane.rowIndex="18" />
-        <Label text="w(t)" GridPane.halignment="RIGHT" GridPane.rowIndex="19" />
-        <TextField text="6" GridPane.columnIndex="1" GridPane.rowIndex="12" fx:id="x0Value" />
-        <TextField fx:id="v0Value" text="0" GridPane.columnIndex="1" GridPane.rowIndex="13" />
-        <TextField fx:id="dtValue" text="0.01" GridPane.columnIndex="1" GridPane.rowIndex="14" />
-        <TextField fx:id="mValue" text="1" GridPane.columnIndex="1" GridPane.rowIndex="15" />
-        <TextField fx:id="kValue" text="0.1" GridPane.columnIndex="1" GridPane.rowIndex="16" />
-        <TextField fx:id="cValue" text="5" GridPane.columnIndex="1" GridPane.rowIndex="17" />
-        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="21">
+        <Label text="ω" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
+        <Label text="R" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
+        <Label text="L" GridPane.halignment="RIGHT" GridPane.rowIndex="9" />
+        <Label text="Ɛ" GridPane.halignment="RIGHT" GridPane.rowIndex="10" />
+        <TextField fx:id="wValue" text="1" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+        <TextField fx:id="RValue" text="80" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+        <TextField fx:id="LValue" text="200" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+        <TextField fx:id="eValue" text="0.01" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="12">
             <Button fx:id="stopButton" mnemonicParsing="false" onAction="#onStop" text="Stop" />
             <Button fx:id="pauseButton" mnemonicParsing="false" onAction="#onPause" text="Pause" />
             <Button fx:id="startButton" mnemonicParsing="false" onAction="#onStart" text="Start" />
         </HBox>
-        <TextArea fx:id="hFun" prefHeight="80.0" prefWidth="200.0" text="0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="18" />
-        <TextArea fx:id="wFun" prefHeight="80.0" prefWidth="200.0" text="0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="19" />
     </GridPane>
     <GridPane gridLinesVisible="true" GridPane.columnIndex="1">
         <columnConstraints>
@@ -128,11 +97,12 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" percentHeight="66.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" percentHeight="34.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="34.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" percentHeight="33.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <Pane fx:id="visualisationPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: SKYBLUE;" />
-            <LineChart fx:id="kinematicsChart" animated="false" createSymbols="false" prefHeight="57.0" prefWidth="195.0" title="Position, velocity and acceleration" GridPane.rowIndex="1">
+            <LineChart fx:id="velocityChart" animated="false" createSymbols="false" prefHeight="57.0" prefWidth="195.0" title="Velocity" GridPane.rowIndex="2">
                 <xAxis>
                     <NumberAxis autoRanging="false" forceZeroInRange="false" label="t" side="BOTTOM" />
                 </xAxis>
@@ -143,6 +113,17 @@
                     <Cursor fx:constant="CROSSHAIR" />
                 </cursor>
             </LineChart>
+         <LineChart fx:id="positionChart" animated="false" createSymbols="false" prefHeight="57.0" prefWidth="195.0" title="Position" GridPane.rowIndex="1">
+            <xAxis>
+               <NumberAxis autoRanging="false" forceZeroInRange="false" label="t" side="BOTTOM" />
+            </xAxis>
+            <yAxis>
+               <NumberAxis autoRanging="false" forceZeroInRange="false" side="LEFT" tickLabelRotation="270" />
+            </yAxis>
+            <cursor>
+               <Cursor fx:constant="CROSSHAIR" />
+            </cursor>
+         </LineChart>
         </GridPane>
         <GridPane gridLinesVisible="true" GridPane.columnIndex="1">
             <columnConstraints>
@@ -152,7 +133,7 @@
                 <RowConstraints minHeight="10.0" percentHeight="34.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" percentHeight="66.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
-            <LineChart fx:id="forcesChart" animated="false" createSymbols="false" title="Forces">
+            <LineChart fx:id="accelerationChart" animated="false" createSymbols="false" title="Acceleration">
                 <xAxis>
                     <NumberAxis autoRanging="false" forceZeroInRange="false" label="t" side="BOTTOM" />
                 </xAxis>
@@ -164,18 +145,15 @@
                 </cursor>
             </LineChart>
             <AnchorPane fx:id="trajectoryPane" GridPane.rowIndex="1">
-                <ScatterChart fx:id="trajectoryChart" animated="false" legendVisible="false" title="Trajectory"
-                              AnchorPane.bottomAnchor="79.78978228827083" AnchorPane.leftAnchor="0.0"
-                              AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <ScatterChart fx:id="trajectoryChart" animated="false" legendVisible="false" title="Trajectory" AnchorPane.bottomAnchor="79.78978228827083" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <xAxis>
-                        <NumberAxis autoRanging="false" forceZeroInRange="false" label="x" side="BOTTOM"/>
+                        <NumberAxis autoRanging="false" forceZeroInRange="false" label="x" side="BOTTOM" />
                     </xAxis>
                     <yAxis>
-                        <NumberAxis autoRanging="false" forceZeroInRange="false" label="xt" side="LEFT"
-                                    tickLabelRotation="270"/>
+                        <NumberAxis autoRanging="false" forceZeroInRange="false" label="xt" side="LEFT" tickLabelRotation="270" />
                     </yAxis>
                     <cursor>
-                        <Cursor fx:constant="CROSSHAIR"/>
+                        <Cursor fx:constant="CROSSHAIR" />
                     </cursor>
                 </ScatterChart>
             </AnchorPane>
